# MicroDeform

./: README.md
arduino/: adc.ino  stepper.ino
arduino/stepper/: stepper.ino
python/: gui.py  main_window.py  main_window.ui  pyproject.toml  requirements.txt
python/src/MicroDeform/: Makefile  gui.py  hw.py  main_window.py  main_window.ui  patch_palette.diff  piezo_errors.py
